repository/addon/yui/src/main/java/org/hippoecm/frontend/plugins/yui/datetime/skin.css
/* YUI skinning isn't working as should so I've copied the calendar sam skin into a hippo-editor-field-datepicker namespace */ 

/* CALENDAR BOUNDING BOX */
.hippo-root .yui-calcontainer {
    background-color:#f2f2f2;
    border:1px solid #808080;
    padding:10px;
}

/* CALENDARGROUP BOUNDING BOX */
.hippo-root .yui-calcontainer.multi {
    padding:0 5px 0 5px;
}

/* BOUNDING BOX FOR EACH CALENDAR GROUP PAGE */
.hippo-root .yui-calcontainer.multi .groupcal {
    background-color:transparent;
    border:none;
    padding:10px 5px 10px 5px;
    margin:0;
}

/* TITLE BAR */
.hippo-root .yui-calcontainer .title {
    background:url(sprite.png) repeat-x 0 0;
    border-bottom:1px solid #cccccc;
    font:100% sans-serif;
    color:#000;
    font-weight:bold;
    height:auto;
    padding:.4em;
    margin:0 -10px 10px -10px;
    top:0;
    left:0;
    text-align:left;
}

.hippo-root .yui-calcontainer.multi .title {
    margin:0 -5px 0 -5px;
}

.hippo-root .yui-calcontainer.withtitle {
    padding-top:0;
}

/* CLOSE BUTTON */
.hippo-root .yui-calcontainer .calclose {
    background:url(sprite.png) no-repeat 0 -300px;
    width:25px;
    height:15px;
    top:.4em;
    right:.4em;
    cursor:pointer;
}

/* CALENDAR TABLE */
.hippo-root .yui-calendar {
    border-spacing:0;
    border-collapse:collapse;
    font:100% sans-serif;
    text-align:center;
    margin:0;
}

/* NAVBAR BOUNDING BOX */
.hippo-root .yui-calendar .calhead {
    background:transparent;
    border:none;
    vertical-align:middle;
    padding:0;
}

/* NAVBAR TEXT CONTAINER */
.hippo-root .yui-calendar .calheader {
    background:transparent;
    font-weight:bold;
    padding:0 0 .6em 0;
    text-align:center;
}

.hippo-root .yui-calendar .calheader img {
    border:none;
}

/* NAVBAR LEFT ARROW */
.hippo-root .yui-calendar .calnavleft {
    background:url(sprite.png) no-repeat 0 -450px;
    width:25px;
    height:15px;
    top:0;
    bottom:0;
    left:-10px;
    margin-left:.4em;
    cursor:pointer;
}

/* NAVBAR RIGHT ARROW */
.hippo-root .yui-calendar .calnavright {
    background:url(sprite.png) no-repeat 0 -500px;
    width:25px;
    height:15px;
    top:0;
    bottom:0;
    right:-10px;
    margin-right:.4em;
    cursor:pointer;
}

/* WEEKDAY HEADER ROW */
.hippo-root .yui-calendar .calweekdayrow {
    height:2em;
}

.hippo-root .yui-calendar .calweekdayrow th {
    padding:0;
    border:none;
}

/* WEEKDAY (Su, Mo, Tu...) HEADER CELLS */
.hippo-root .yui-calendar .calweekdaycell {
    color:#000;
    font-weight:bold;
    text-align:center;
    width:2em;
}

/* CALENDAR FOOTER. NOT IMPLEMENTED BY DEFAULT */
.hippo-root .yui-calendar .calfoot {
    background-color:#f2f2f2;
}

/* WEEK NUMBERS (ROW HEADERS/FOOTERS) */
.hippo-root .yui-calendar .calrowhead, .hippo-root .yui-calendar .calrowfoot {
    color:#a6a6a6;
    font-size:85%;
    font-style:normal;
    font-weight:normal;
    border:none;
}

.hippo-root .yui-calendar .calrowhead {
    text-align:right;
    padding:0 2px 0 0;
}

.hippo-root .yui-calendar .calrowfoot {
    text-align:left;
    padding:0 0 0 2px;
}

/* NORMAL CELLS */
.hippo-root .yui-calendar td.calcell {
    border:1px solid #cccccc;
    background:#fff;
    padding:1px;
    height:1.6em;
    line-height:1.6em; /* set line height equal to cell height to center vertically */
    text-align:center;
    white-space:nowrap;
}

/* LINK INSIDE NORMAL CELLS */
.hippo-root .yui-calendar td.calcell a {
    color:#0066cc;
    display:block;
    height:100%;
    text-decoration:none;
}

/* TODAY'S DATE */
.hippo-root .yui-calendar td.calcell.today {
    background-color:#000;
}

.hippo-root .yui-calendar td.calcell.today a {
    background-color:#fff;
}

/* OOM DATES */
.hippo-root .yui-calendar td.calcell.oom {
    background-color:#cccccc;
    color:#a6a6a6;
    cursor:default;
}

/* SELECTED DATE */
.hippo-root .yui-calendar td.calcell.selected {
    background-color:#fff;
    color:#000;
}

.hippo-root .yui-calendar td.calcell.selected a {
    background-color:#b3d4ff;
    color:#000;
}

/* HOVER DATE */
.hippo-root .yui-calendar td.calcell.calcellhover {
    background-color:#426fd9;
    color:#fff;
    cursor:pointer;
}

.hippo-root .yui-calendar td.calcell.calcellhover a {
    background-color:#426fd9;
    color:#fff;
}

/* DEFAULT OOB DATES */
.hippo-root .yui-calendar td.calcell.previous {
    color:#e0e0e0;
}

/* CUSTOM RENDERERS */
.hippo-root .yui-calendar td.calcell.restricted { text-decoration:line-through; }
.hippo-root .yui-calendar td.calcell.highlight1 { background-color:#ccff99; }
.hippo-root .yui-calendar td.calcell.highlight2 { background-color:#99ccff; }
.hippo-root .yui-calendar td.calcell.highlight3 { background-color:#ffcccc; }
.hippo-root .yui-calendar td.calcell.highlight4 { background-color:#ccff99; }

/* CalendarNavigator */

/* MONTH/YEAR LABEL */
.hippo-root .yui-calendar a.calnav { 
    border: 1px solid #f2f2f2;
    padding:0 4px;
    text-decoration:none;
    color:#000;
    zoom:1;
}

.hippo-root .yui-calendar a.calnav:hover { 
    background: url(sprite.png) repeat-x 0 0;
    border-color:#A0A0A0;
    cursor:pointer;
}

/* NAVIGATOR MASK */
.hippo-root .yui-calcontainer .yui-cal-nav-mask {
    background-color:#000;
    opacity:0.25;
    filter:alpha(opacity=25); /* IE */
}

/* NAVIGATOR BOUNDING BOX */
.hippo-root .yui-calcontainer .yui-cal-nav {
    font-family:arial,helvetica,clean,sans-serif;
    font-size:93%;
    border:1px solid #808080;
    left:50%;
    margin-left:-7em;
    width:14em;
    padding:0;
    top:2.5em;
    background-color:#f2f2f2;
}

.hippo-root .yui-calcontainer.withtitle .yui-cal-nav {
    top:4.5em;
}

/* NAVIGATOR BOUNDING BOX */
.hippo-root .yui-calcontainer.multi .yui-cal-nav {
    width:16em;
    margin-left:-8em;
}

/* NAVIGATOR YEAR/MONTH/BUTTON/ERROR BOUNDING BLOCKS */
.hippo-root .yui-calcontainer .yui-cal-nav-y,
.hippo-root .yui-calcontainer .yui-cal-nav-m,
.hippo-root .yui-calcontainer .yui-cal-nav-b {
    padding:5px 10px 5px 10px;
}

.hippo-root .yui-calcontainer .yui-cal-nav-b {
    text-align:center;
}

.hippo-root .yui-calcontainer .yui-cal-nav-e {
    margin-top:5px;
    padding:5px;
    background-color:#EDF5FF;
    border-top:1px solid black;
    display:none;
}

/* NAVIGATOR LABELS */
.hippo-root .yui-calcontainer .yui-cal-nav label {
    display:block;
    font-weight:bold;
}

/* NAVIGATOR MONTH CONTROL */
.hippo-root .yui-calcontainer .yui-cal-nav-mc {
    width:100%;
    _width:auto; /* IE6, IE7 Quirks don't handle 100% well */
}

/* NAVIGATOR MONTH CONTROL, VALIDATION ERROR */
.hippo-root .yui-calcontainer .yui-cal-nav-y input.yui-invalid {
    background-color:#FFEE69;
    border: 1px solid #000;
}

/* NAVIGATOR YEAR CONTROL */
.hippo-root .yui-calcontainer .yui-cal-nav-yc {
    width:4em;
}

/* NAVIGATOR BUTTONS */

/* BUTTON WRAPPER */
.hippo-root .yui-calcontainer .yui-cal-nav .yui-cal-nav-btn {
    border:1px solid #808080;
    background: url(sprite.png) repeat-x 0 0;
    background-color:#ccc;
    margin: auto .15em;
}

/* BUTTON (based on button-skin.css) */
.hippo-root .yui-calcontainer .yui-cal-nav .yui-cal-nav-btn button {
    padding:0 8px;
    font-size:93%;
    line-height: 2;  /* ~24px */
    *line-height: 1.7; /* For IE */
    min-height: 2em; /* For Gecko */
    *min-height: auto; /* For IE */
    color: #000;
}

/* DEFAULT BUTTONS */
/* NOTE: IE6 will only pickup the yui-default specifier from the multiple class specifier */
.hippo-root .yui-calcontainer .yui-cal-nav .yui-cal-nav-btn.yui-default {
    border:1px solid #304369;
    background-color: #426fd9;
    background: url(sprite.png) repeat-x 0 -1400px;
}

.hippo-root .yui-calcontainer .yui-cal-nav .yui-cal-nav-btn.yui-default button {
    color:#fff;
}

